# token_bridge

./: .gitignore
bridge-db-entity/: Cargo.toml
bridge-db-entity/src/: configurations.rs  leaderboard.rs  lib.rs  mantle_bridge_transactions.rs  mantle_claim_transactions.rs  mantle_faucet.rs  solana_bridge_non_parsed_transaction.rs  solana_bridge_transaction.rs  solana_claim_transaction.rs  solana_faucet_data.rs  transactions.rs
bridge-db-migration/: Cargo.toml  MigrationConfig.toml
bridge-db-migration/src/: lib.rs  m20230522_093612_create_solana_bridge_non_parsed_transactions_table.rs  m20230525_182113_create_solana_bridge_transactions_table.rs  m20230525_182126_create_solana_claim_transactions_table.rs  m20230530_111142_create_mantle_claim_transactions_table.rs  m20230530_115914_create_mantle_bridge_transactions_table.rs  m20230605_082834_update_mantle_bridge_tx_table.rs  m20230605_085129_update_solana_bridge_tx_table.rs  m20230605_085702_update_solana_claim_tx_table.rs  m20230605_085938_update_mantle_claim_tx_table.rs  m20230605_091047_create_configurations_table.rs  m20230605_091053_create_leaderboard_table.rs  m20230608_110551_solana_faucet_data.rs  m20230616_053720_transactions.rs  m20230703_095606_faucet.rs  main.rs
bridge-polling-service/: .gitignore  App.toml  Cargo.toml
bridge-polling-service/src/: config.rs  main.rs
bridge-web-api/: .gitignore  App.toml  Cargo.toml  Rocket.toml  params
bridge-web-api/src/: bridge.rs  instruction_data.rs  main.rs  rpc_wrapper.rs
bridge-web-api/src/polling_service/: db_actions.rs  mod.rs  polling.rs  service.rs
bridge-web-api/src/routes/: mod.rs  transaction.rs
