[package]
name = "bridge-db-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bridge_db_entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }
