[package]
name = "bridge-polling-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
bridge-db-entity = { path = "../bridge-db-entity" }
chrono = "0.4.24"
datadog-apm = { version = "0.2.1", git = "https://github.com/rosarp/datadog-apm-rust.git" }
figment = { version = "0.10.8", features = ["toml", "env"] }
kafka = { version = "0.9.0", features = ["openssl"] }
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "signal", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
log = "0.4.17"