[package]
name = "bridge-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bincode = "1.3.3"
borsh = "0.9.3"
bs58 = "0.4.0"
chrono = "0.4.23"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
solana-client = "1.14.18"
solana-program = "1.14.18"
solana-sdk = "1.14.18"
solana-transaction-status = "1.14.18"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
bridge-db-entity = { path = "../bridge-db-entity" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uint = "0.9.5"
figment = { version = "0.10.8", features = ["toml", "env"] }
serde = "1.0.160"
sea-orm = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
log = "0.4.17"
tokio = { version = "1.27.0", features = ["macros", "signal", "time"] }
sea-orm-rocket = "0.5.2"
async-trait = "0.1.64"

[dev-dependencies]
tokio = "1.25.0"